# mvx-winter-challenge

./: Deploy-Contract.md  README.md
arena_sc/: Cargo.toml  README.md
blacksmith_sc/: Cargo.toml  README.md
challenge-1/: README.md  generate_wallets.ts  package-lock.json  package.json
challenge-10/: README.md  package-lock.json  package.json  ranking.ts  transactions.csv  transactions.json  winter_leaderboard.csv  winter_leaderboard.json  winter_tokens_leaderboard.csv
challenge-11/: README.md  package-lock.json  staking.ts
challenge-11-12/: staking.ts
challenge-12/: README.md  claim_rewards.ts  package-lock.json
challenge-13/: README.md  claim_rewards.ts  package-lock.json  set_reward_recipient.ts  transfer_rewards.ts
challenge-14/: README.md  generate_resources.ts  package-lock.json  package.json
challenge-15/: README.md  claim_resources.ts  package-lock.json
challenge-16/: README.md  mint_citizen.ts  package-lock.json
challenge-17/: README.md  mint_ore.ts  package-lock.json
ore_sc/: Cargo.toml  (+1 more)
snow_sc/: Cargo.toml  README.md
snow_sc/meta/: Cargo.toml
snow_sc/meta/src/: main.rs
snow_sc/output/: snow.abi.json  snow.imports.json  snow.mxsc.json  snow.wasm
snow_sc/scenarios/: snow.scen.json
snow_sc/src/: snow.rs
snow_sc/tests/: snow_scenario_go_test.rs  snow_scenario_rs_test.rs
snow_sc/wallets/: wallet_shard0_1.pem  wallet_shard0_2.pem  wallet_shard0_3.pem  wallet_shard1_1.pem  wallet_shard1_2.pem  wallet_shard1_3.pem  wallet_shard2_1.pem  wallet_shard2_2.pem  wallet_shard2_3.pem
snow_sc/wasm/: Cargo.toml
snow_sc/wasm/src/: lib.rs
(+205 files in other folders)
