[package]
name = "snow"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/snow.rs"

[dependencies.multiversx-sc]
version = "0.54.6"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[workspace]
members = [
    ".",
    "meta",
]
